# croupier

./: CMakeLists.txt  README.md  bootstrap.bat  bootstrap.sh
include/croupier/: action.hpp  action_type.hpp  api.hpp  betting_state.hpp  dealer.hpp  deck.hpp  event.hpp  event_type.hpp  game.hpp  round.hpp  table.hpp
include/croupier/card/: card.hpp  card_set.hpp  card_set_ops.hpp  deck.hpp  rank.hpp  suit.hpp
include/croupier/evaluator/: equivalence_class.hpp  equivalence_class_data.hpp  equivalences.hpp  evaluator.hpp  hand_evaluation.hpp  hand_type.hpp
include/croupier/evaluator/equivalence_classes/: ace_to_five_low_equivalence_classes.hpp  ace_to_six_low_equivalence_classes.hpp  badugi_equivalence_classes.hpp  deuce_to_seven_low_equivalence_classes.hpp  traditional_equivalence_classes.hpp
include/croupier/game/: action.hpp  action_type.hpp  betting_state.hpp  dealer.hpp  event.hpp  event_type.hpp  game.hpp  table.hpp
include/croupier/player/: player.hpp  player_set.hpp
include/croupier/ruleset/: blinds.hpp  limit_type.hpp  limits.hpp  ranking_type.hpp  ruleset.hpp  stage.hpp
include/croupier/ruleset/detail/: blinds.hpp  limit_type.hpp  limits.hpp  ranking_type.hpp  stage.hpp
include/croupier/ruleset/draw/: five_card_draw_ruleset.hpp
include/croupier/ruleset/holdem/: omaha_holdem_ruleset.hpp  texas_holdem_ruleset.hpp
include/croupier/ruleset/stud/: razz_ruleset.hpp  seven_card_stud_ruleset.hpp
include/croupier/utility/: combination.hpp  intrinsics.hpp  permute_for.hpp  prime_factorization.hpp
tests/: equivalence_class_test.cpp  main_test.cpp
